# studious-eureka

./: CMakeLists.txt  README.md
src/container/: vector.h
src/eureka/: traits.h  type_traits.h
src/eureka/exception/: exception.h
src/eureka/functional/: reference_wrapper.h
src/eureka/memory/: allocator.h  general.h  memory.h  pointer.h  pointer_access.h  shared_ptr.h  unique_ptr.h
src/eureka/test/: test.h
src/eureka/traits/: ability.h  categorization.h  general.h  misc.h  relations.h  traits.h  transformation.h  utility.h
src/eureka/utility/: optional.h  pair.h  tuple.h  tuple_impl.h  utility.h
src/memory/: allocator.h
test/: CMakeLists.txt  main.cc  traits.cc
